# ai-agent-workshop-202505

./: .env.sample  A-Z Walkthrough material.py  README.md  SETUP.md  cleanup.linux.sh  docker-compose.yaml  pyproject.toml  setup.linux.sh  setup.windows.ps1
agents/: company_info_distributer.py  facilitator.py  file_manager.py  kvadrat_info_distributer.py  planner.py
ingest/: 1_crawl.py  2_qa.py  3_rag.py  4_server.py  autorag-config.yaml  chunk_config.yaml  pyproject.toml
openwebui/: open_webui_intranet.py
teams/: graph_example.py  rag.py  selector_group_chat.py  swarm.py
tools/: fileserver.py  kvadrat_intern.py  mcp_config.json  retriever.py
tools/chroma_db/: chroma.sqlite3
