[project]
name = "ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autorag",
    "chromadb",
    "crawl4ai==0.6.0",
    "llama-index-embeddings-openai-like",
    "llama-index-embeddings-ollama",
    "llama-index-llms-ollama",
    "llama-index-llms-openai-like",
    "unstructured",
]
